package com.example.basket.entity

object TagsTesting {
    internal const val NAVIGATION_BUTTON = "navigation button"
    internal const val BASKET_LAZY = "basket lazy"
    internal const val BOTTOM_APP_BAR = "bottom app bar"
    internal const val FAB_PLUS = "fab plus"
    internal const val DIALOG_EDIT_BASKET = "alertdialog edit basket"
    internal const val DIALOG_EDIT_BASKET_INPUT_NAME = "field input new name"
    internal const val BASKETBOTTOMSHEET = "Basket Bottom Sheet"
    internal const val BASKET_BS_INPUT_NAME = "Basket Bottom Sheet input name"
    internal const val BUTTON_OK = "Basket Bottom Sheet text OK"
}