...
import androidx.navigation.NavType
import androidx.navigation.navArgument

/*** Contract for information needed on every App navigation destination*/
interface ScreenDestination {
    val icon: ImageVector
    val route: String
}

/*** App app navigation destinations*/
object Baskets : ScreenDestination {
    override val icon = Icons.Filled.ShoppingBasket
    override val route = "baskets"
...
