...
        modifier = Modifier.padding(top = 1.dp)){
        if (idImage > 0) {
            Image(
                painter =painterResource(id =  idImage ),
                modifier = Modifier.height(imageSize).fillMaxWidth(),
                contentScale = ContentScale.FillBounds,
                contentDescription = "Photo"
            )
        }

        Box(modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = 12.dp, vertical = 4.dp))
...
